[package]
name = "Geumul"
version = "0.1.0"
edition = "2021"
author = "ESukmean"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "rt"] }
bytes = "*"
avl = "*"
futures-util = "*"

# atomic
arc-swap = "*"
once_cell ="*"
dashmap = "*"

# network / interface related
tunio = { path = "lib/tunio", version="*", features=["tokio"] }
netconfig = "0.4"
etherparse = "*"
socket2 = { version = "*", features = ["all"] }

# dependencies of crates
advmac = "*"

# other utils
toml = "0.8"
serde = "1"
enum-map = "2"
num_cpus = "*"
array-macro = "2.1.8"
thiserror ="*"
libc = "*"
byteorder = "*"
